fix(library-gallery): dropdown dark mode background

--- a/src/components/library-gallery.module.css
+++ b/src/components/library-gallery.module.css
@@ -80,7 +80,7 @@
   margin: 0;
   overflow-y: auto;
   list-style: none;
-  background-color: rgb(255 255 255 / 90%);
+  background-color: var(--ifm-background-color);
   border: 1px solid var(--ifm-color-emphasis-300);
   border-radius: var(--ifm-button-border-radius);
   box-shadow: var(--ifm-global-shadow-md);
